--- a/desktop/package.json
+++ b/desktop/package.json
@@ -56,7 +56,8 @@
     "@mui/x-data-grid": "7.22.1",
     "@mui/x-date-pickers": "7.22.2",
     "dayjs": "1.11.13",
-    "react-router-dom": "6.27.0"
+    "react-router-dom": "6.27.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
